[metadata]
name = toshiba-ac
author = Kamil Sroka
author_email = kamilsroka92@gmail.com
description = Toshiba AC controller - allows to control Toshiba HVAC systems with WiFi
long_description = file: README.md
long_description_content_type = text/markdown
keywords = toshiba, ac, hvac
license = Apache License 2.0
url = https://github.com/KaSroka/Toshiba-AC-control
project_urls =
    Bug Tracker = https://github.com/KaSroka/Toshiba-AC-control/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    azure-iot-device==2.9.0
    aiohttp>=3.8.1,<=3.10.0

[versioneer]
VCS = git
style = pep440
versionfile_source = toshiba_ac/_version.py
versionfile_build =
tag_prefix = v
parentdir_prefix = toshiba-ac-
